--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_1873b5fea9605fd?reconnect=true
+spring.datasource.username=bf847f7164ea2e
+spring.datasource.password=7bd3857f
+server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
 
