--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-03.cleardb.net/heroku_1873b5fea9605fd?reconnect=true
-spring.datasource.username=bf847f7164ea2e
-spring.datasource.password=7bd3857f
+spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net/sql7351514?user=root?reconnect=true
+spring.datasource.username=sql7351514
+spring.datasource.password=upa7CCh1EI
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
