--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net/sql7351514?user=root?reconnect=true
+spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net/sql7351514?reconnect=true
 spring.datasource.username=sql7351514
 spring.datasource.password=upa7CCh1EI
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
-
